--- a/README.rdoc
+++ b/README.rdoc
@@ -1,6 +1,6 @@
 = Beer Mapping
 
-A ruby wrapper for the beermapping.com site.  So the ruby community can ejoy beer whenever, whereever.
+A ruby wrapper for the beermapping.com site.  So the ruby community can ejoy beer whenever, wherever.
 
 * {API Guidelines}[http://beermapping.com/api/]
 
